Fix some styling on page - Removed margin on <p> tag in top section - Added flex-wrap to info section image containers

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   margin: 60px 0px;
   justify-content: center;
   flex-wrap: wrap-reverse;
+  align-items: center;
 }
 
 .hero-text-container {
@@ -75,6 +76,10 @@ a {
   color: #E5E7EB
 }
 
+ p {
+  margin: 0px;
+ }
+
 .info-content-child p {
   margin: 0px;
   width: 145px;
@@ -109,4 +114,11 @@ button {
   display: flex;
   justify-content: center;
   gap: 50px;
+  flex-wrap: wrap;
+}
+
+.info-main-container {
+  display: flex;
+  align-content: center;
+  flex-direction: column;
 }
